--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--Start Header--><header>
         <div class="container">
                 <a href="#" class="logo">
-                  <img src="../imges/logo.png" alt="logo">
+                  <img src="imges/logo.png" alt="logo">
                 </a>
                 <nav>
                   <i class="fas fa-bars toggle-menu"></i>
@@ -149,50 +149,50 @@
         </div>
       <div class="imgs-container">
         <div class="box">
-          <img src="../imges/proto1.jpg" alt="">
+          <img src="imges/proto1.jpg" alt="">
           <div class="caption">
             <h4>Awesome Imge e</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="../imges/proto2.jpg" alt="">
+          <img src="imges/proto2.jpg" alt="">
           <div class="caption">
             <h4>Awesome Image </h4>
             <p>Photography</p>
           </div>
         </div><div class="box">
-          <img src="../imges/proto3.jpeg" alt="">
+          <img src="imges/proto3.jpeg" alt="">
           <div class="caption">
             <h4>Awesome Image </h4>
             <p>Photography</p>
           </div>
         </div><div class="box">
-          <img src="../imges/proto4.jpg" alt="">
+          <img src="imges/proto4.jpg" alt="">
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div><div class="box">
-          <img src="../imges/proto5.jpeg" alt="">
+          <img src="imges/proto5.jpeg" alt="">
           <div class="caption">
             <h4>Awesome Image </h4>
             <p>Photography</p>
           </div>
         </div><div class="box">
-          <img src="../imges/proto6.jpg" alt="">
+          <img src="imges/proto6.jpg" alt="">
           <div class="caption">
             <h4>Awesome Image </h4>
             <p>Photography</p>
           </div>
         </div><div class="box">
-          <img src="../imges/proto7.jpeg" alt="">
+          <img src="imges/proto7.jpeg" alt="">
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div><div class="box">
-          <img src="../imges/proto8.jpeg" alt="">
+          <img src="imges/proto8.jpeg" alt="">
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
@@ -261,11 +261,11 @@
               <h3>Testimonials</h3>
               <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
               <div class="content">
-                <img src="../imges/skills-01.jpg" alt="">
+                <img src="imges/skills-01.jpg" alt="">
                 <div class="text">Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</div>
               </div>
               <div class="content">
-                <img src="../imges/skills-02.jpg" alt="">
+                <img src="imges/skills-02.jpg" alt="">
                 <div class="text">Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</div>
               
               </div>
